--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -26,7 +26,7 @@
 
 .header{
     //background: url(https://pbidro.github.io/desafio_blog-barber-shop/assets/images/post-image.jpg) no-repeat;
-    background: url(/assets/images/imagen1.png) ;
+    background: url(https://pbidro.github.io/desafio_tienda-xda/assets/images/imagen1.png) ;
     background-size: cover;
     height: 50vh;
 
